# twstock_cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  gemini-extension.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  update-homebrew.yml
Formula/: twse-cli.rb  twstock-cli.rb
docs/plans/: 2026-03-16-feat-twse-cli-agent-friendly-stock-data-tool-plan.md  2026-03-17-feat-expand-endpoint-coverage-tpex-and-twse-web-api-plan.md
scripts/: generate_integration_tests.py  generate_tpex_endpoints.py
skills/persona-dividend-investor/: SKILL.md
skills/persona-stock-analyst/: SKILL.md
skills/twse-company-profile/: SKILL.md
skills/twse-dividend-screener/: SKILL.md
skills/twse-etf-rankings/: SKILL.md
skills/twse-ex-dividend-calendar/: SKILL.md
skills/twse-institutional-flow/: SKILL.md
skills/twse-margin-sentiment/: SKILL.md
skills/twse-market-overview/: SKILL.md
skills/twse-revenue-tracker/: SKILL.md
skills/twse-shared/: SKILL.md
skills/twse-stock-compare/: SKILL.md
skills/twse-stock-lookup/: SKILL.md
skills/twstock-company-profile/: SKILL.md
skills/twstock-dividend-screener/: SKILL.md
skills/twstock-etf-rankings/: SKILL.md
skills/twstock-ex-dividend-calendar/: SKILL.md
skills/twstock-institutional-flow/: SKILL.md
skills/twstock-margin-sentiment/: SKILL.md
skills/twstock-market-overview/: SKILL.md
skills/twstock-revenue-tracker/: SKILL.md
skills/twstock-shared/: SKILL.md
skills/twstock-stock-compare/: SKILL.md
skills/twstock-stock-lookup/: SKILL.md
tests/: test_cache.py  test_cli.py  test_client.py  test_endpoints.py  test_help_json.py  test_normalize.py  test_output.py  test_phase3_cli.py  test_sanitize.py  test_schema.py  test_validate.py
tests/integration/: conftest.py  test_cases.json  test_cases_tpex_gen.json  test_cases_twse_gen.json  test_cases_web_gen.json  test_runner.py
twse_cli/: __init__.py  cache.py  cli.py  client.py  endpoints.py  help_json.py  normalize.py  output.py  schema.py  serve.py  validate.py
twse_cli/commands/: _factory.py
twstock_cli/: __init__.py  cache.py  cli.py  client.py  endpoints.py  normalize.py  output.py  sanitize.py  schema.py  serve.py
twstock_cli/commands/: __init__.py  _factory.py
