[project]
name = "twse-cli"
version = "0.1.0"
description = "Agent-friendly CLI for Taiwan Stock Exchange (TWSE) OpenAPI — 143 endpoints, one tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "weirenlan" }]
keywords = ["twse", "taiwan", "stock", "cli", "agent", "openapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/weirenlan/twse-cli"
Repository = "https://github.com/weirenlan/twse-cli"

[project.scripts]
twse = "twse_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["twse_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 140
