[project]
name = "twstock-cli"
version = "0.1.4"
description = "Agent-friendly CLI for Taiwan Stock Exchange (TWSE) and Taipei Exchange (TPEX) — stock market data, one tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "weirenlan" }]
keywords = ["twse", "tpex", "otc", "taiwan", "stock", "cli", "agent", "openapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "python-pptx>=1.0.2",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
analysis = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "matplotlib>=3.9",
    "plotly>=5.24",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/DeepWaveLab/twstock_cli"
Repository = "https://github.com/DeepWaveLab/twstock_cli"

[project.scripts]
twstock = "twstock_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["twstock_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: hits real TWSE/TPEX API (deselect with '-m not integration')",
    "smoke: minimal smoke test subset",
    "twse: TWSE OpenAPI endpoints only",
    "tpex: TPEX OpenAPI endpoints only",
    "web: TWSE web API endpoints only",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py312"
line-length = 140
